# react_fastapi_railway_template

./: .dockerignore  .env.template  .gitignore  DEPLOYMENT_TESTING_PLAN.md  Dockerfile  Dockerfile.railway  RAILWAY_DEPLOYMENT.md  RAILWAY_FIXES_SUMMARY.md  RAILWAY_PRODUCTION_SETUP.md  README.md  app.db  backend.ipynb  backend_api copy.ipynb  backend_api.ipynb  backend_api_login.ipynb  env.example  frontend copy.ipynb  frontend.ipynb  frontend_web copy.ipynb  frontend_web.ipynb  frontend_web_login.ipynb  invoke.yml  package-lock.json  package.json  pyproject.toml  railway.json  railway_testing.txt
api/: Dockerfile  app.db  pyproject.toml  railway.json  start.sh
api/app/: crud.py  db.py  main.py  models.py  security.py
api/scripts/: seed_user.py
backend/: pyproject.toml  railway.json  requirements.txt
backend/.devcontainer/: .dockerignore
backend/app/: __init__.py  main.py
frontend/: Dockerfile.railway  main.py  nixpacks.toml  package-lock.json  package.json  railway.alternative.json  railway.json  requirements.txt  vite.config.ts
frontend/src/: App.tsx
scripts/: debug-railway-build.bat  dev.bat  dev.sh  pre-deploy-check.bat  setup-env.bat  setup-env.sh  start-backend.bat  test-config-only.bat  test-railway.bat  test-railway.sh  test-setup.sh
web/: .gitignore  Dockerfile.railway  app.db  nginx.conf  nixpacks.toml  package-lock.json  package.json  railway.alternative.json  railway.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: axios.ts  http.ts
web/src/contexts/: AuthContext.tsx
web/src/pages/: Login.tsx
